--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-slate
 title: Welcome to HHM Tecnologia da Informação Eireli
-github:
-  is_project_page: false
+github: is_project_page: false
